Fixing existing scripts. Standardizing the email method used. Renaming tests since files cannot have '-' in the name.
Signed-off-by: Samantha Dawley <sdawley@redhat.com>